--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,9 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+
+/node_modules
+/app/assets/javascripts/bundle.js
+/react/coverage
+
 .env
